--- a/assets/style.css
+++ b/assets/style.css
@@ -96,9 +96,6 @@ body {
 	width: 60%;
 }
 
-#gallery {
-	/*	min-height: 100vh; */
-}
 .title{
 	text-align: center;
 	padding-block: 2em;
@@ -107,12 +104,16 @@ body {
 	justify-content: center;
 }
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-	color: #fff;
+	color: #000;
 	background-color: #BEB45A;
 	border-radius:0 ;
+	font-weight: 800;
+	text-transform: uppercase;
 }
 .nav-pills .nav-link {
-	color: #000
+	color: #000;
+	font-size: 18px;
+	cursor: pointer;
 }
 .item-column {
 	position: relative;
